--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -8,14 +8,14 @@
     </div>
     <div class="d-flex justify-content-between flex-column flex-lg-row gap-2 w-100 w-lg-auto">
         <div class="d-flex flex-row mx-lg-4" >
-            <ng-autocomplete [data]="products" [searchKeyword]="'name'" 
+            <ng-autocomplete [data]="products" [searchKeyword]="'nombre'" 
                 [itemTemplate]="itemTemplate" placeholder="Buscar " (selected)="getItem($event)" (keydown.enter)="searchEndowment()">
             </ng-autocomplete>
             <ng-template class="overflow-visible z-3" #itemTemplate let-item>
                 <div class="d-flex align-items-center p-2">
-                    <img [src]="'assets/images/' + item.image" alt="{{ item.name }}"
+                    <img [src]="'assets/images/' + item.imagen" alt="{{ item.name }}"
                         width="40" height="40" class="me-2">
-                    <p [innerHTML]="item.name"></p>
+                    <p [innerHTML]="item.nombre"></p>
                 </div>
             </ng-template>
             <button class="btn btn-warning" (click)="searchEndowment()"><i class="bi bi-search"></i></button>
@@ -54,8 +54,8 @@
                         <img [src]="'/assets/images/' + item.image" alt="{{ item.name }}"
                             width="50" height="50" class="mt-2">
                     </div>
-                    <button class="btn btn-outline-danger"><i class="bi bi-trash"
-                            (click)="removeItem($index) "></i></button>
+                    <button class="btn btn-outline-danger" (click)="removeItem($index)"><i class="bi bi-trash"
+                            ></i></button>
                 </div>
             </div>
             }
