--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,7 @@
-<div class="container-fluid mh-100 mw-100 p-3 bg-body-secondary bg-wood">
+<div class="container-fluid mh-100 mw-100 p-3 app-root-container">
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
+    <main class="flex-grow-1 d-flex flex-column main-content">
+        <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
 </div>
