--- a/src/app/catalog/catalog-home/catalog.html
+++ b/src/app/catalog/catalog-home/catalog.html
@@ -1,8 +1,8 @@
-<div class="container-fluid mh-100 mw-100 p-3">
-  <div class="d-flex flex-row p-3">
-    <div class="d-flex flex-wrap gap-3 p-3 w-100">
+<div class="container-fluid mh-100 mw-100">
+  <div class="d-flex flex-row">
+    <div class="d-flex flex-wrap justify-content-center gap-3 p-3 w-100">
       @for (product of products; track $index) {
-      <div class="d-flex align-content-start flex-wrap m-3 border border-0 pe-auto" 
+      <div class="d-flex  m-3 border border-0 pe-auto" 
         (click)="endowmentDetails(products[$index].id)">
         <div class="d-flex flex-column m-3" style="width: 18rem;">
           <div class="card-img-box">
