cambio de boton de carrito

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -67,7 +67,7 @@
             </div>
             }
             <button class="btn btn-warning text-white w-100 mt-3" [disabled]="cartService.getItems().length === 0"
-                (click)="sendQuotation()"><i class="bi bi-send mx-2"></i>Enviar cotizacion</button>
+                (click)="sendQuotation()"><i class="bi bi-send mx-2"></i>Ir a pedido</button>
             }
         </div>
         }
