--- a/src/app/catalog/catalog-quotation/catalog-quotation.html
+++ b/src/app/catalog/catalog-quotation/catalog-quotation.html
@@ -92,8 +92,7 @@
         </div>
         <div class="d-flex justify-content-center">
             <button class="btn btn-warning text-white w-50 mt-3" (click)="sendQuotation()"><i
-                    class="bi bi-send mx-2"></i>Enviar
-                cotizacion</button>
+                    class="bi bi-send mx-2"></i>Enviar pedido</button>
         </div>
     </div>
 </div>
