--- a/src/app/catalog/home.css
+++ b/src/app/catalog/home.css
@@ -1,7 +1,7 @@
 .hero {
     min-height: 50vh;
     max-height: 80vh;
-    background-image: url('/assets/images/Especias-India-portada.jpg');
+    background-image: url('/assets/images/header-banner.png');
     background-size: cover;
     background-position: center;
     color: #fff;
